tests/unit/parser/invalid-domains/repeated-constant-definition.pddl
; constant with name `x` (7:21) is defined multiple times in constants section
(define (domain repeated-constant-definition)
        (:requirements :typing)
        (:types cool beans)
        (:constants x - cool
                    y - beans
                    x - beans))